Update plugin to embed OPA as a library
These changes reduce the system administration overhead of deploying OPA
as an authorization plugin. With these changes, opa-docker-authz can
also be run as a container.

--- a/glide.yaml
+++ b/glide.yaml
@@ -6,3 +6,5 @@ import:
   - authorization
 - package: github.com/fsnotify/fsnotify
   version: 4da3e2cfbabc9f751898f250b49f2439785783a1
+- package: github.com/open-policy-agent/opa
+  version: v0.6.0
