Changes made subsequent to review of pull request
Removed the requirement for 'sudo' in the Makefile, altered plugin to
fail open and authorize requests in the absence of a policy file,
removed the creation of default policy in the Dockerfile, and updated
the README with logging information and to reflect the various changes.

Signed-off-by: Nigel Brown <nigel@windsock.io>

--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
         "name": "opa-args",
         "description": "Arguments for opa-docker-authz",
         "settable": ["value"],
-        "value": ["-policy-file", "/default.rego"]
+        "value": ["-policy-file", "policy.rego"]
     },
     "interface": {
         "socket": "opa-docker-authz.sock",
@@ -23,5 +23,6 @@
             "options": ["bind", "ro"],
             "settable": ["source"]
        } 
-    ]
+    ],
+    "workdir": "/opa"
 }
