REF #52: Added '-quiet' flag to disable logging of each HTTP request
Signed-off-by: Daniel Arrais <daniel.t.arrais@gmail.com>

--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
         "name": "opa-args",
         "description": "Arguments for opa-docker-authz",
         "settable": ["value"],
-        "value": ["-policy-file", "policy.rego"]
+        "value": ["-policy-file", "policy.rego", "-quiet"]
     },
     "interface": {
         "socket": "opa-docker-authz.sock",
