--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
         "name": "opa-args",
         "description": "Arguments for opa-docker-authz",
         "settable": ["value"],
-        "value": ["-policy-file", "policy.rego", "-quiet"]
+        "value": ["-policy-file", "policy.rego"]
     },
     "interface": {
         "socket": "opa-docker-authz.sock",
