Workflow should build releases when tags are pushed
Signed-off-by: Lars Haugan <lars.haugan@sparebank1.no>

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,9 +1,9 @@
-name: PR Check
+name: Release
 
 on:
   push:
-    branches:
-    - "main"
+    tags:
+    - 'v*'
 
 jobs:
   build:
@@ -15,11 +15,11 @@ jobs:
 
     steps:
     - name: Check out code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
-    - name: generate-tag                                                                 
-      run: |                                                                             
-        echo "TAG=$(git show -s --date=format:'%Y%m%d-%H%M' --format=%cd)" >> $GITHUB_ENV
+    - name: Set TAG_NAME in Environment
+      # Subsequent jobs will be have the computed tag name
+      run: echo "TAG_NAME=${GITHUB_REF##*/}" >> $GITHUB_ENV
 
     - name: Log in to the Container registry
       uses: docker/login-action@v3
@@ -31,7 +31,7 @@ jobs:
     - name: Build and publish docker plugin
       env:
         REPO: ghcr.io/${{ github.repository }}
-        VERSION: ${{ env.TAG }}
+        VERSION: ${{ env.TAG_NAME }}
       run: |
         make plugin
-        docker plugin push "$REPO:$VERSION"
+        docker plugin push "$REPO:${TAG_NAME}"
