--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -28,7 +28,7 @@ jobs:
       - name: Build and publish docker plugin
         env:
           REPO: ghcr.io/${{ github.repository }}
-          VERSION: edge
+          TAG_NAME: edge
         run: |-
-          make plugin
-          docker plugin push "$REPO:${TAG_NAME}"
+          REPO=${{ env.REPO }} VERSION=${{ env.TAG_NAME }} make plugin
+          docker plugin push "${{ env.REPO }}:${{ env.TAG_NAME }}"
