build plugin and images for multiple architectures
This adds support for building and publishing linux-amd64 and linux-arm64 versions of the plugin.

Signed-off-by: Lars Haugan <lars.haugan@sparebank1.no>

--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -10,7 +10,11 @@ jobs:
     steps:
     - name: Check out code
       uses: actions/checkout@v3
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
 
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
     - name: Build (Linux)
       run: make build
 
