--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -18,6 +18,12 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v4
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Log in to the Container registry
         uses: docker/login-action@v3
         with:
@@ -31,4 +37,14 @@ jobs:
           TAG_NAME: edge
         run: |-
           REPO=${{ env.REPO }} VERSION=${{ env.TAG_NAME }} make plugin
-          docker plugin push "${{ env.REPO }}:${{ env.TAG_NAME }}"
+          docker plugin push "${{ env.REPO }}:${{ env.TAG_NAME }}-linux-amd64"
+          docker plugin push "${{ env.REPO }}:${{ env.TAG_NAME }}-linux-arm64"
+
+          docker manifest create ${{ env.REPO }}:${{ env.TAG_NAME }} \
+            ${{ env.REPO }}:${{ env.TAG_NAME }}-linux-amd64 \
+            ${{ env.REPO }}:${{ env.TAG_NAME }}-linux-arm64
+          
+          docker manifest annotate  ${{ env.REPO }}:${{ env.TAG_NAME }} ${{ env.REPO }}:${{ env.TAG_NAME }}-linux-amd64 --os linux --arch amd64
+          docker manifest annotate  ${{ env.REPO }}:${{ env.TAG_NAME }} ${{ env.REPO }}:${{ env.TAG_NAME }}-linux-arm64 --os linux --arch arm64
+
+          docker manifest push ${{ env.REPO }}:${{ env.TAG_NAME }}
