build plugin and images for multiple architectures
This adds support for building and publishing linux-amd64 and linux-arm64 versions of the plugin.
We only build new tags with os-arch naming since the docker plugin system does not seem
to have support for the manifest type: `application/vnd.docker.distribution.manifest.list.v2+json`.

Signed-off-by: Lars Haugan <lars.haugan@sparebank1.no>

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,6 +18,12 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v4
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Set TAG_NAME in Environment
       # Subsequent jobs will be have the computed tag name
         run: echo "TAG_NAME=${GITHUB_REF##*/}" >> $GITHUB_ENV
@@ -34,4 +40,6 @@ jobs:
           REPO: ghcr.io/${{ github.repository }}
         run: |-
           REPO=${{ env.REPO }} VERSION=${{ env.TAG_NAME }} make plugin
+          docker plugin push "${{ env.REPO }}:${{ env.TAG_NAME }}-linux-amd64"
+          docker plugin push "${{ env.REPO }}:${{ env.TAG_NAME }}-linux-arm64"
           docker plugin push "${{ env.REPO }}:${{ env.TAG_NAME }}"
