Add Regal for linting Rego
And fix the few issue reported. Also rewrite some older
constructs to more modern Rego.

Signed-off-by: Anders Eknert <anders@styra.com>

--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -29,11 +29,16 @@ jobs:
       run: make test
 
   lint:
-    name: Go Lint
+    name: Lint
     runs-on: ubuntu-20.04
     steps:
     - name: Check out code
       uses: actions/checkout@v4
 
-    - name: Golang Style and Lint Check
+    - name: Setup Regal
+      uses: StyraInc/setup-regal@v1
+      with:
+        version: latest
+
+    - name: Go (golangci-lint) and Rego (Regal) Lint
       run: make check
