chore: upgrade golangci-lint to v2.1.6
Upgrades golangci-lint from v1.64.5 to v2.1.6.

This involves updating the version in the Makefile and
migrating the .golangci.yaml configuration to the new v2
format. This includes adjustments to linter and formatter
setups. A boolean expression was fixed by the linter in
main.go.

Previously the linter config had a typo, which caused
settings for 'lll' and 'misspell' to not get applied. This was
caused by a typo in the key name "linter-settings", which
should have been "linters-settings".

Signed-off-by: Ville Vesilehto <ville@vesilehto.fi>

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -1,25 +1,37 @@
-run:
-  timeout: 5m
-
-linter-settings:
-  lll:
-    line-length: 200
-
-  misspell:
-    locale: US
-
+version: "2"
 linters:
-  disable-all: true
+  default: none
   enable:
-  - errcheck
-  - govet
-  - ineffassign
-  - revive # replacement for golint
-  - gofmt
-  - goimports
-  - unused
-  - misspell
-  - typecheck
-  - staticcheck
-  - gosimple
-  # - gosec # too many false positives
+    - errcheck
+    - govet
+    - ineffassign
+    - misspell
+    - revive
+    - staticcheck
+    - unused
+  settings:
+    lll:
+      line-length: 200
+    misspell:
+      locale: US
+  exclusions:
+    generated: lax
+    presets:
+      - comments
+      - common-false-positives
+      - legacy
+      - std-error-handling
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
+formatters:
+  enable:
+    - gofmt
+    - goimports
+  exclusions:
+    generated: lax
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
